res/examples/invalid/type_alias_when_already_defined_type_alias.eg
type Int = number;
type Int = number;

// out: TypeError: Int is already defined